syntax = "proto3";

package onight.zjfae.afront.gens.v3;

option java_outer_classname="UserDetailInfo";

//Generated By BrewRobot:Fri Dec 15 11:48:33 CST 2017

message PBIFE_userbaseinfo_getUserDetailInfo{
	///ife/userbaseinfo/getUserDetailInfo.html

	string name = 1; //,姓名,String,不校验,是,

	string account = 2; //,账户,String,不校验,是,

	string lastLoginTime = 3; //,最后一次登录时间,String,不校验,是,

	string lastLoginTerminalName = 4; //,上次登录终端,String,不校验,是,

	string fundAccount = 5; //,资金账号,String,不校验,是,

	string tradeAccount = 6; //,交易账户,String,不校验,是,

	string safeLevel = 7; //,安全等级,String,不校验,是,

	string isBondedCard = 8; //,是否绑定银行卡,String,不校验,是,true-是，false-否

	string isFundPasswordSet = 9; //,是否设置交易密码,String,不校验,是,true-是，false-否

	string isRiskTest = 10; //,是否做过风险测评,String,不校验,是,true-是，false-否

	string isRiskExpired = 11; //,风险测评是否过期,String,不校验,是,true-是，false-否

	string isBondedMobile = 12; //,是否绑定手机号,String,不校验,是,true-是，false-否

	string mobile = 13; //,手机号,String,不校验,是,

	string isBondedEmail = 14; //,是否绑定邮箱,String,不校验,是,true-是，false-否

	string email = 15; //,邮箱,String,不校验,是,

	string isSecuritySet = 16; //,是否设置安保问题,String,不校验,是,

	string certificateCode = 17; //,证件号码,String,不校验,是,

	string certificateType = 18; //,证件类型,String,不校验,是,

	string userType = 19; //,用户类型,String,不校验,是,

	string riskLevel = 20; //,风险测评等级,String,不校验,是,

	string riskExpiredDate = 21; //,风险测评有效期,String,不校验,是,

	string isOlderThan65 = 22; //,是否年过65,String,不校验,是,

	string marketingChannel = 23; //,用户经纪商渠道,String,不校验,是,

	string actCode = 24; //,活动码,String,不校验,是,

	string brokerNo = 25; //,用户经纪商编号,String,不校验,是,

	string recomandAccountName = 26; //,推荐人账号,String,不校验,是,

	string firstBindCardTime = 27; //,首次绑卡时间,String,不校验,是,

	string isProductBuy = 28; //,是否有认购记录0-否，1-是,String,不校验,是,

	string isTransferBuy = 29; //,是否有二级市场受让0-否，1-是,String,不校验,是,

	string registerTime = 30; //,注册时间,String,不校验,是,

	string userGroup = 31; //,用户等级,String,不校验,是,

	string isNewCustomer = 32; //,是否新客,String,不校验,是,0-否 1-是

	string isFirstLogin = 33; //,是否首次登录,String,不校验,是,true false

	string riskAssessment = 34; //,离风评到期日的天数,String,不校验,是,

	string cifsel = 35; //,用户星级 String 不校验 是 4:5星级客户,5:4星级客户,6:3星级客户,7:2星级客户,8:1星级客户,9:0星级客户

	string changeCardStatus = 36; //,会员换卡审核状态 String 不校验 是 null：未提出过申请；-1：待审核；0审核不通过；1：审核通过

	string unbindCardStatus = 37; //,会员解卡审核状态	String 不校验 是 null：未提出过申请；-1：待审核；0审核不通过；2：审核通过

	string highNetWorthStatus = 38; //,会员换合格投资者审核状态 String 不校验 是 null：未提出过申请；-1：待审核；0审核不通过 3 审核通过

	string userInfoStatus = 39; //,会员信息修改审核状态 String 不校验 是 null：未提出过申请；-1：待审核；0审核不通过；4：审核通过

	string accreditedTime = 40; //,合格投资者认定时间	String	不校验	是	(时分秒)

	string accreditedFlag = 41; //,成为合格投资者方式	String	不校验	是	(1-人工;2-自动)

	string accreditedSqTime = 42; //,合格投资者授权时间	String	不校验	是	(时分秒)

	string isAccreditedInvestor = 43; //,是否合格投资者	String	不校验	是	(1-是;0-否)

	string certificateCodeAll = 44; //,证件号码、非脱敏,String,不校验,是,

	string userId = 45; //,用户编号,String,不校验,是

	string canAutoUpgrade = 46; //,是否允许自动升级：0-否 1-是 String 不校验 是

	string maxUserGroup = 47; //,历史最高用户等级 String 不校验 是

	string isArtificialGrade = 48; //,是否人工标记的等级：0-否 1-是	String 不校验 是 

	string gradeTime = 49; //,升级时间 String 不校验 是 

	string maxValue = 50; //,历史最高值 String 不校验 是 

	string maxValueTime = 51; //,历史最高值时间 String	不校验	是	(时分秒)

	string operId = 52; //,操作人id String 不校验	是	(1-人工;2-自动)

	string operName = 53; //,操作人姓名	String	不校验	是	

	string accreditedChannel = 54; //,合格投资者授权终端 String	不校验	是	(1-是;0-否)

	string accreditedDbTime = 55; //,达标时间,String,不校验,是,
    
    string isRealInvestor= 56; //,是否真正合格投资者,String,不校验,是
    
    string iconsUserType = 57; //展示图标用户类型，是否合格投资|高净值用户等类型相拼接
    
    string verifyName = 58; //是否实名（0-未实名；1-实名
    
    string showLevel = 59; //用户会员等级
    
    string accreditedTipsFlag = 60;//是否合格投资者认定提醒标志(0-否;1-是),String,不校验,是,
    
    string whiteGroup = 61;//白名单

    string certificateStatusType = 62;//身份证效验状态：1、已绑卡或曾绑卡但未上传身份证2、已上传身份证，但身份证已过期3、已上传身份证未填职业4、已上传身份证已填职业5、身份证已效验
	
    string isAuthorizePrivacy = 63;//是否同意隐私协议：1：已同意，0：不同意

    string isShow = 64;//是否线下控制 1：是 0：否

}

message Ret_PBIFE_userbaseinfo_getUserDetailInfo{
	///ife/userbaseinfo/getUserDetailInfo.html

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_userbaseinfo_getUserDetailInfo data=3;


}

message REQ_PBIFE_userbaseinfo_getUserDetailInfo{
	///ife/userbaseinfo/getUserDetailInfo.html
   string version = 1; //,版本号,String,不校验,是,

}